--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "prettier": "^3.3.1",
