--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -59,6 +59,17 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           password: ${{ secrets.VPS_PASSWORD }} 
           port: 22
+          source: "ecosystem.config.js"
+          target: "public_html/ecosystem.config.js"
+          strip_components: 1
+
+      - name: 원격 접속 배포
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.VPS_IP }}   
+          username: ${{ secrets.VPS_USERNAME }}
+          password: ${{ secrets.VPS_PASSWORD }} 
+          port: 22
           source: "node_modules/"
           target: "public_html/node_modules/"
           strip_components: 1
