--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -60,7 +60,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }} 
           port: 22
           source: "package.json,ecosystem.config.js"
-          target: "public_html"
+          target: "public_html/"
           strip_components: 1
 
       - name: 원격 접속 배포
