--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -59,7 +59,7 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           password: ${{ secrets.VPS_PASSWORD }} 
           port: 22
-          source: "package.json"
+          source: "./package.json"
           target: "public_html"
           strip_components: 1
 
@@ -70,7 +70,7 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           password: ${{ secrets.VPS_PASSWORD }} 
           port: 22
-          source: "ecosystem.config.js"
+          source: "./ecosystem.config.js"
           target: "public_html"
           strip_components: 1
 
